[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.1"
license = "Apache"

[workspace.dependencies]
agave-geyser-plugin-interface = "2.0.13"
anchor-gen = { git = "https://github.com/OliverNChalk/anchor-gen" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor" }
arrayref = "0.3.7"
auto_impl = "1.2.0"
bincode = "1.3.3"
borsh = "0.10.0"
borsh_0_9 = { package = "borsh", version = "0.9.2" }
borsh_1 = { package = "borsh", version = "1.0" }
bytemuck = "1.16.0"
clap = { version = "4.5.8", features = ["derive"] }
const_format = "0.2.32"
crossbeam-channel = "0.5.13"
ed25519-dalek = "1.0.1"
expect-test = "1.5.0"
eyre = "0.6.12"
fossdyke = { path = "./crates/fossdyke" }
fossdyke-api = { path = "./crates/fossdyke-api" }
funnel = { path = "./crates/funnel" }
hashbrown = "0.14.5"
hexlit = "0.5.5"
idempotent-alt = { path = "./crates/idempotent-alt" }
kamino_lending_cpi = { path = "./cpis/kamino_lending", features = ["no-entrypoint"] }
litesvm = { git = "https://github.com/OliverNChalk/litesvm" }
log = "0.4.21"
messina = { path = "./crates/messina" }
meteora_cpmm_cpi = { path = "./cpis/meteora_cpmm", features = ["no-entrypoint"] }
meteora_dlmm_cpi = { path = "./cpis/meteora_dlmm", features = ["no-entrypoint"] }
meteora_vault_cpi = { path = "./cpis/meteora_vault", features = ["no-entrypoint"] }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.2"
mimicry = { path = "./crates/mimicry" }
mock-ed25519 = { path = "./crates/mock-ed25519" }
mollusk-svm = { git = "https://github.com/buffalojoec/mollusk" }
num-derive = "0.4.2"
num-traits = "0.2.0"
orca_amm_cpi = { path = "./cpis/orca_amm", features = ["no-entrypoint"] }
paladin-lockup-program = { git = "https://github.com/paladin-bladesmith/lockup-program" }
paladin-shared = { path = "./crates/paladin-shared" }
paladin-sol-stake-view-program = { git = "https://github.com/paladin-bladesmith/sol-stake-view-program" }
paladin-stake-program = { git = "https://github.com/paladin-bladesmith/stake-program" }
paladin-stake-program-client = { git = "https://github.com/paladin-bladesmith/stake-program" }
proptest = "1.5.0"
raydium_amm_cpi = { path = "./cpis/raydium_amm", features = ["no-entrypoint"] }
raydium_clmm_cpi = { path = "./cpis/raydium_clmm", features = ["no-entrypoint"] }
reqwest = "0.11.27"
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "ee923befe65f50ead3272a1c2e43c81cabbec129" }
saber_amm_cpi = { path = "./cpis/saber", features = ["no-entrypoint"] }
serde_with = "3.8.1"
solana-account-decoder = "2.0.13"
solana-client = "2.0.13"
solana-compute-budget = "2.0.13"
solana-logger = "2.0.13"
solana-program = "2.0.13"
solana-program-runtime = "2.0.13"
solana-sdk = "2.0.13"
solana-stake-program = "2.0.13"
solana-transaction-status = "2.0.13"
spl-associated-token-account = { version = "5.0.0", features = ["no-entrypoint"] }
spl-discriminator = { version = "0.3.0" }
spl-math = "0.3.0"
spl-pod = { version = "0.4.0" }
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"] }
strum = "0.26.3"
svm-test = { git = "https://github.com/OliverNChalk/svm-test" }
tokio = "1.37"
tokio-util = "0.7.11"
toolbox = { git = "https://github.com/OliverNChalk/toolbox-rs" }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }
whirlpool_cpi = { path = "./cpis/whirlpool", features = ["no-entrypoint"] }
zmq = "0.10.0"

[profile.release]
codegen-units = 1
debug = true
opt-level = 3
overflow-checks = true

[profile.release_paranoid]
inherits = "release"
debug-assertions = true
