[workspace]
resolver = "2"
members = ["program"]

[workspace.metadata.cli]
solana = "2.1.4"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2024-12-01"
lint = "nightly-2024-12-01"

[workspace.dependencies]
borsh = "1.5.1"
bytemuck = "1.16.1"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.203"
serde_with = "2.3.3"
shank = "0.4.2"
solana-program = "2.0.19"
solana-program-test = "2.0.19"
solana-sdk = "2.0.19"
spl-associated-token-account = "=4.0.0"
spl-discriminator = "=0.3.0"
spl-token-2022 = "=4.0.0"
rand = "0.8.5"
test-case = "3.3.1"
thiserror = "1.0.61"
